# vsomeip_test

./: README.md  result.pcapng
client/: CMakeLists.txt  subscribe-sample.cpp  vsomeip-subscribe.json
server/: notify-sample.cpp  sample-ids.hpp  vsomeip-local.json
